redirect to login

--- a/app/views/home/defffff.html.erb
+++ b/app/views/home/defffff.html.erb
@@ -1,5 +1,4 @@
 <nav>
-  <%= link_to 'Вход', login_path %>
-  <%= link_to 'Регистрация', register_path %>
+  <%= link_to 'выход', logout_path %>
 </nav>
 <h1>Привет!</h1>
