changed navigation bar

--- a/app/views/home/defffff.html.erb
+++ b/app/views/home/defffff.html.erb
@@ -1,4 +1,5 @@
 <nav>
   <%= link_to 'выход', logout_path %>
 </nav>
-<h1>Привет!</h1>
+<%= image_tag ("drakosha.png") %>
+<h1>Знакомьтесь, Персик!</h1>
