--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,101 @@
  *= require_tree .
  *= require_self
  */
+
+h1
+{
+    color:#ec1718;
+    font-style: italic;
+    cursor: default;
+    margin: auto;
+    font-family: Caveat;
+    font-size: 7.5vw;
+    user-select: none
+}
+
+a:link, a:visited
+{
+    border-radius: 10px;
+    color: #5d0808;
+    text-decoration: none;
+    font-family: "Century Gothic";
+    font-weight: bold;
+    background-color: #dee4f4;
+    text-align: center;
+    display: inline-block;
+    padding: 14px 25px;
+    margin-top: 0.5rem;
+    margin-left: 0.5rem;
+    user-select: none;
+}
+a:hover
+{
+    color: #ec1718;
+    background-color: #c2cdec;
+    text-decoration: none;
+}
+
+.image
+{
+    alt: "Dragon Sleeping";
+    user-select: none;
+    pointer-events: none;
+    width:48%;
+    height:48%;
+}
+
+.input-line
+{
+    height: 100px;
+    width: 350px;
+    margin: auto;
+}
+.input_text
+{
+    text-align: left;
+    font-family: "Century Gothic";
+    font-weight: bold;
+    float: left;
+    margin-bottom: 0.25rem;
+    height: 35px;
+    width: 190px;
+}
+.input_field
+{
+    float: right;
+    margin-bottom: 0.25rem;
+    height: 20px;
+    width: 150px;
+}
+.submit
+{
+    border: none;
+    user-select: none;
+    border-radius: 10px;
+    color: #5d0808;
+    font-family: "Century Gothic";
+    font-weight: bold;
+    cursor: pointer;
+    margin-bottom: 0.5rem;
+    height: 35px;
+    width: 190px;
+    background: #dee4f4;
+}
+.submit:hover
+{
+    color: #ec1718;
+    background-color: #c2cdec;
+}
+
+.error-display
+{
+    font-family: "Century Gothic";
+    color: #ec1718;
+    font-weight: bold;
+    height: 15px;
+    width: 150px;
+    cursor: default;
+    user-select: none;
+    margin: auto;
+    padding-bottom: 1rem;
+}
