create character,character menu,characters list

--- a/app/views/home/defffff.html.erb
+++ b/app/views/home/defffff.html.erb
@@ -7,3 +7,5 @@
 <%= button_to "Создать комнату", room_create_path, method: :get%>
 
 <%= button_to "Поиск комнат", room_find_path, method: :get%>
+
+<%= button_to "Персонажи", character_list_path, method: :get%>
