Add lobby search page front

--- a/app/views/character/list.html.erb
+++ b/app/views/character/list.html.erb
@@ -1,6 +1,10 @@
+<style>body {
+    background-color: #f4f7ff;
+}</style>
+
 <%- @characters.each do |character| %>
   <p >
     <%= character.character_name %>
   </p>
 <% end %>
-<%= button_to "Создать нового персонажа", character_new_path, method: :get%>
+<%= button_to "Создать нового персонажа", character_new_path, method: :get, class:"home_button"%>
