--- a/app/views/home/defffff.html.erb
+++ b/app/views/home/defffff.html.erb
@@ -1,11 +1,21 @@
+<style>body {
+    background-color: #f4f7ff;
+}</style>
+
 <nav>
-  <%= link_to 'выход', logout_path %>
+  <%= link_to 'Выход', logout_path %>
 </nav>
-<%= image_tag ("drakosha.png") %>
-<h1>Знакомьтесь, Персик!</h1>
+<div class="home_page_center" style="text-align: center">
+<%= image_tag ("drakosha.png"), class:"image"%>
+<h1 class="home-header">Знакомьтесь, Персик!</h1>
+</div>
 
-<%= button_to "Создать комнату", room_create_path, method: :get%>
+<div class="home_button_container">
+<%= button_to "Создать комнату", room_create_path, method: :get, class:"home_button"%>
 
-<%= button_to "Поиск комнат", room_find_path, method: :get%>
+<%= button_to "Поиск комнат", room_find_path, method: :get, class:"home_button"%>
+</div>
 
-<%= button_to "Персонажи", character_list_path, method: :get%>
+<div style="text-align: center; margin-top: 2rem">
+<%= button_to "Персонажи", character_list_path, method: :get, class:"home_button"%>
+</div>
