--- a/app/views/room/new.html.erb
+++ b/app/views/room/new.html.erb
@@ -10,7 +10,7 @@
 <%= form_for :room, class: 'room_data_form' do |f| %>
 
   <div class="lobby-container">
-    <%= label_tag :room_name, 'Название лобби', class:"input_text-lobby" %>
+    <%= label_tag :room_name, 'Название лобби:', class:"input_text-lobby" %>
     <%= f.text_field :room_name, class:"input_field-lobby" %>
   </div>
     <div style="text-align: center">
