--- a/app/views/room/show.html.erb
+++ b/app/views/room/show.html.erb
@@ -1,3 +1,19 @@
-<%- @lists.each do |list| %>
-  <%= list.character_name %>
+<% content_for :head do %>
+  <%= javascript_include_tag "show.js", "data-turbolinks-track" => true  %>
 <% end %>
+<div>
+  <div id='chat-box'>
+    <%@messages.each do |message| message  %>
+      <%= render "#{message.direction(@current_user.id)}", message: message %>
+    <% end %>
+  </div>
+  <%= form_for :message, id:'message-form' do |f| %>
+    <div>
+      <%= label_tag :body, 'текст' %>
+      <%= f.text_field :body %>
+    </div>
+    <div style="text-align: center">
+      <%= f.submit 'отправить'  %>
+    </div>
+  <% end %>
+</div>
