--- a/app/views/room/show.html.erb
+++ b/app/views/room/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :head do %>
-  <%= javascript_include_tag "show", "data-turbolinks-track" => true  %>
+  <%= javascript_import_module_tag  "show" %>
 <% end %>
 <div>
   <div id='chat-box'>
