--- a/app/views/room/show.html.erb
+++ b/app/views/room/show.html.erb
@@ -1,8 +1,9 @@
 <% content_for :head do %>
   <%= javascript_import_module_tag  "show" %>
-
 <% end %>
 <div>
+  <p>Код подключения: <%= @room_tag %></p>
+  <input type="hidden" id="player_id" value="<%= @current_user.id %>" >
   <div id='chat-box'>
     <%@messages.each do |message| message  %>
       <%= render "#{message.direction(@current_user.id)}", message: message %>
