--- a/app/views/room/_incoming.html.erb
+++ b/app/views/room/_incoming.html.erb
@@ -1,5 +1,5 @@
-<div style="width: 100px">
-  <div style="color: lightblue; border-radius: 3px">
+<div class="message-line-incoming">
+  <div class="incoming">
     <div>
       <%= message.body %>
     </div>
