--- a/app/views/room/_outgoing.html.erb
+++ b/app/views/room/_outgoing.html.erb
@@ -1,5 +1,5 @@
-<div style="width: 100px">
-  <div style="color: darkblue; border-radius: 3px">
+<div style="width: 45%">
+  <div class = "outcoming">
     <div>
       <%= message.body %>
     </div>
