--- a/app/views/room/show.html.erb
+++ b/app/views/room/show.html.erb
@@ -2,16 +2,13 @@
   <%= javascript_include_tag "show.js", "data-turbolinks-track" => true  %>
 <% end %>
 <div>
-  <div id='chat-box'>
+  <div id='chat-box' class="chat-box">
     <%@messages.each do |message| message  %>
-      <%= render "#{message.direction(@current_user.id)}", message: message %>
+        <%= render "#{message.direction(@current_user.id)}", message: message%>
     <% end %>
   </div>
   <%= form_for :message, id:'message-form' do |f| %>
-    <div>
-      <%= label_tag :body, 'текст' %>
-      <%= f.text_field :body %>
-    </div>
+      <%= f.text_field :body, class:"message-input" %>
     <div style="text-align: center">
       <%= f.submit 'отправить'  %>
     </div>
