--- a/app/views/room/_incoming.html.erb
+++ b/app/views/room/_incoming.html.erb
@@ -3,7 +3,7 @@
     <div>
       <%= message.body %>
     </div>
-    <div style="text-decoration-color: #999999">
+    <div class="text-time">
       <%= message.created_at %>
     </div>
   </div>
