--- a/app/views/room/_outgoing.html.erb
+++ b/app/views/room/_outgoing.html.erb
@@ -1,9 +1,9 @@
-<div style="width: 45%">
+<div class="message-line-outcoming">
   <div class = "outcoming">
     <div>
       <%= message.body %>
     </div>
-    <div style="text-decoration-color: #999999">
+    <div class="text-time">
       <%= message.created_at %>
     </div>
   </div>
